# Lost-and-Found-management-System

./: .gitignore  CMakeLists.txt  README.md
data/: found_items.txt  lost_items.txt
include/: FoundItem.h  Item.h  LostFoundSystem.h  LostItem.h  User.h  Utilities.h
src/: FoundItem.cpp  Item.cpp  LostFoundSystem.cpp  LostItem.cpp  User.cpp  Utilities.cpp  main.cpp
